# flask-gastos

./: .cpanel.yml  .gitignore  README.md  app.py  crear_admin.py  extensions.py  logger.py  models.py  passenger_wsgi.py  pyproject.toml  requirements.txt  schema.sql  schema_d1.sql  wrangler.toml
migrations/: 001_abonos_gasto.sql
routes/: admin.py  auth.py  descargas.py  gastos.py  pagos_extra.py  reportes.py
src/: auth_utils.py  balance.py  db.py  index.py  router.py  templates.py  templating.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  login.html  reporte.html
templates/admin/: configuracion.html  form_usuario.html  usuarios.html
templates/descargas/: index.html
templates/errors/: 404.html  500.html
templates/gastos/: detalle.html  form.html  lista.html
templates/pagos_extra/: form.html  lista.html
templates/setup/: crear_admin.html
