[project]
name = "gastos-pareja"
version = "0.1.0"
description = "App para dividir gastos de pareja"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "python-multipart",
    "openpyxl",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[tool.workers-py]
# Indica a pywrangler que use el patrón WorkerEntrypoint
entrypoint = "src/index.py"
